[gd_scene load_steps=43 format=2]

[ext_resource path="res://Scripts/ChapterSelectScreen.gd" type="Script" id=1]
[ext_resource path="res://Scripts/schmancy_buttons.gd" type="Script" id=2]
[ext_resource path="res://Scripts/SelectionButton.gd" type="Script" id=3]
[ext_resource path="res://Assets/Font/use_this.tres" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/SFX/ui/error_005.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/pass.png" type="Texture" id=6]
[ext_resource path="res://Assets/Untitled69_20230118204040.png" type="Texture" id=7]

[sub_resource type="Shader" id=87]
code = "shader_type canvas_item;
uniform sampler2D noise_img;
uniform float speed = 1.0;
uniform vec4 smoke_color : hint_color;

void fragment(){
	vec2 uv1 = vec2(UV.x + TIME*speed, UV.y);
	vec2 uv2 = vec2(UV.x - TIME*speed, UV.y);
	vec2 uv3 = vec2(UV.x, UV.y + TIME*speed);
	
	
	float noise_r = texture( noise_img, uv1 ).r;
	float noise_g = texture( noise_img, uv2 ).g;
	float noise_b = texture( noise_img, uv3 ).b;
	
	vec3 new_color = vec3(noise_r, noise_g, noise_b);
	
	float new_alpha = noise_r * noise_g * noise_b;
	
	COLOR.rgb = smoke_color.rgb;//texture(TEXTURE, UV).rgb;
	COLOR.a = clamp(new_alpha * 5.0 * texture(TEXTURE, UV).a, 0.0, 1.0);
}"

[sub_resource type="OpenSimplexNoise" id=92]

[sub_resource type="NoiseTexture" id=89]
width = 1000
height = 1000
seamless = true
noise = SubResource( 92 )
noise_offset = Vector2( 1000, 1000 )

[sub_resource type="ShaderMaterial" id=91]
shader = SubResource( 87 )
shader_param/speed = 0.05
shader_param/smoke_color = Color( 0.572549, 0.0352941, 0.0823529, 0.972549 )
shader_param/noise_img = SubResource( 89 )

[sub_resource type="StyleBoxFlat" id=102]
bg_color = Color( 0.337255, 0.156863, 0.145098, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.788235, 0.0745098, 0.247059, 1 )
shadow_color = Color( 0.788235, 0.0745098, 0.247059, 0.309804 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=98]
bg_color = Color( 0.290196, 0.133333, 0.12549, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.788235, 0.0745098, 0.247059, 1 )
shadow_color = Color( 0.788235, 0.0745098, 0.247059, 0.309804 )
shadow_size = 5

[sub_resource type="ButtonGroup" id=118]
resource_name = "Chapters"

[sub_resource type="DynamicFontData" id=122]
antialiased = false
font_path = "res://Assets/Font/upheavtt.ttf"

[sub_resource type="DynamicFont" id=93]
size = 40
outline_size = 2
outline_color = Color( 0.0352941, 0, 0, 1 )
font_data = SubResource( 122 )

[sub_resource type="DynamicFontData" id=112]
antialiased = false
font_path = "res://Assets/Font/upheavtt.ttf"

[sub_resource type="DynamicFont" id=94]
size = 30
outline_size = 2
outline_color = Color( 0.0352941, 0, 0, 1 )
font_data = SubResource( 112 )

[sub_resource type="Gradient" id=128]
offsets = PoolRealArray( 0.64794, 1 )
colors = PoolColorArray( 1, 0, 0.193359, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 128 )

[sub_resource type="ParticlesMaterial" id=129]
emission_shape = 2
emission_box_extents = Vector3( 105, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, -98, 0 )
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 1.0
angle = 720.0
angle_random = 1.0
scale = 12.03
scale_random = 0.64
color_ramp = SubResource( 15 )
hue_variation = -0.06
hue_variation_random = 1.0

[sub_resource type="StyleBoxFlat" id=99]
bg_color = Color( 0.0431373, 0.0588235, 0.0941176, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0862745, 0.121569, 0.2, 1 )
shadow_color = Color( 0.282353, 0.129412, 0.121569, 0.392157 )
shadow_size = 5

[sub_resource type="Shader" id=120]
code = "shader_type canvas_item;
uniform sampler2D noise_img;
uniform float speed = 1.0;
uniform vec4 smoke_color : hint_color;

void fragment(){
	vec2 uv1 = vec2(UV.x + TIME*speed, UV.y);
	vec2 uv2 = vec2(UV.x - TIME*speed, UV.y);
	vec2 uv3 = vec2(UV.x, UV.y + TIME*speed);
	
	
	float noise_r = texture( noise_img, uv1 ).r;
	float noise_g = texture( noise_img, uv2 ).g;
	float noise_b = texture( noise_img, uv3 ).b;
	
	vec3 new_color = vec3(noise_r, noise_g, noise_b);
	
	float new_alpha = noise_r * noise_g * noise_b;
	
	COLOR.rgb = smoke_color.rgb;//texture(TEXTURE, UV).rgb;
	COLOR.a = clamp(new_alpha * 5.0 * texture(TEXTURE, UV).a, 0.0, 1.0);
}"

[sub_resource type="ShaderMaterial" id=121]
shader = SubResource( 120 )
shader_param/speed = 0.05
shader_param/smoke_color = Color( 0, 0, 0, 0.972549 )
shader_param/noise_img = SubResource( 89 )

[sub_resource type="Shader" id=106]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=107]
shader = SubResource( 106 )
shader_param/blur_amount = 1.354

[sub_resource type="DynamicFontData" id=115]
antialiased = false
font_path = "res://Assets/Font/upheavtt.ttf"

[sub_resource type="DynamicFont" id=116]
size = 50
outline_size = 2
outline_color = Color( 0.486275, 0.0509804, 0.0509804, 1 )
extra_spacing_top = -5
extra_spacing_space = -15
font_data = SubResource( 115 )

[sub_resource type="StyleBoxFlat" id=117]
bg_color = Color( 0.815686, 0.0588235, 0.0588235, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0.121569, 0.286275, 1 )
shadow_color = Color( 0.956863, 0.129412, 0.290196, 0.266667 )
shadow_size = 6

[sub_resource type="ButtonGroup" id=119]
resource_name = "Fellers"

[sub_resource type="StyleBoxFlat" id=108]
bg_color = Color( 0.180392, 0.0666667, 0.101961, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.101961, 0.0392157, 0.0588235, 1 )
shadow_size = 14

[sub_resource type="DynamicFont" id=109]
size = 40
outline_size = 2
outline_color = Color( 0.0352941, 0, 0, 1 )
font_data = SubResource( 112 )

[sub_resource type="StyleBoxFlat" id=110]
bg_color = Color( 0.921569, 0.0431373, 0.415686, 0 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.921569, 0.0431373, 0.415686, 1 )
border_blend = true

[sub_resource type="Gradient" id=124]
offsets = PoolRealArray( 0, 0.0716981, 0.188679, 0.792453, 0.901887, 0.992453 )
colors = PoolColorArray( 0.870588, 0.0313726, 0.207843, 0, 0.870588, 0.0313726, 0.207843, 0, 0.870588, 0.0313726, 0.207843, 1, 0.870588, 0.0313726, 0.207843, 1, 0.870588, 0.0313726, 0.207843, 0, 0.870588, 0.0313726, 0.207843, 0 )

[sub_resource type="GradientTexture2D" id=114]
gradient = SubResource( 124 )

[sub_resource type="DynamicFont" id=111]
size = 50
outline_size = 3
outline_color = Color( 0.0745098, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=123]
bg_color = Color( 0.870588, 0.0313726, 0.207843, 0 )
border_width_left = 9
border_width_top = 9
border_width_right = 9
border_width_bottom = 9
border_color = Color( 0.870588, 0.0313726, 0.207843, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=113]
bg_color = Color( 0.984314, 0.619608, 0.188235, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.988235, 0.364706, 0.321569, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0.635294, 0.215686, 0.188235, 1 )
shadow_size = 1
shadow_offset = Vector2( 0, 8 )

[sub_resource type="DynamicFont" id=125]
size = 40
outline_size = 1
outline_color = Color( 0.733333, 0.913725, 0.160784, 1 )
extra_spacing_space = -14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=130]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=131]
bg_color = Color( 0.960784, 0.478431, 0.129412, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.960784, 0.223529, 0.172549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.635294, 0.215686, 0.188235, 1 )
shadow_size = 1
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=132]
bg_color = Color( 0.984314, 0.619608, 0.188235, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.988235, 0.364706, 0.321569, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.635294, 0.215686, 0.188235, 1 )
shadow_size = 1
shadow_offset = Vector2( 0, 2 )

[node name="ChapterSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.184314 )
material = SubResource( 91 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Chapters" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -472.5
margin_top = -268.0
margin_right = 472.5
margin_bottom = 268.0
custom_constants/separation = 10

[node name="Chapter1" type="Button" parent="Chapters"]
margin_right = 228.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 102 )
custom_styles/pressed = SubResource( 102 )
custom_styles/focus = SubResource( 102 )
custom_styles/normal = SubResource( 98 )
group = SubResource( 118 )
expand_icon = true
script = ExtResource( 2 )
should_focus = true

[node name="Control" type="Control" parent="Chapters/Chapter1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = true
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Chapters/Chapter1/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Chapters/Chapter1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -95.0
margin_top = 4.0
margin_right = 95.0
margin_bottom = 45.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 93 )
text = "CHAPTER 1"

[node name="BossName" type="Label" parent="Chapters/Chapter1"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -103.5
margin_top = -131.0
margin_right = 103.5
margin_bottom = -10.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 94 )
text = "pisun"
align = 1
valign = 2
autowrap = true

[node name="ParticleBox" type="Control" parent="Chapters/Chapter1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -8.0
margin_bottom = 32.0
mouse_filter = 2

[node name="Particles2D" type="Particles2D" parent="Chapters/Chapter1/ParticleBox"]
show_behind_parent = true
emitting = false
amount = 50
lifetime = 2.0
local_coords = false
process_material = SubResource( 129 )

[node name="Chapter2" type="Button" parent="Chapters"]
modulate = Color( 0.654902, 0.654902, 0.654902, 1 )
margin_left = 238.0
margin_right = 467.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 99 )
custom_styles/pressed = SubResource( 99 )
custom_styles/focus = SubResource( 99 )
custom_styles/disabled = SubResource( 99 )
custom_styles/normal = SubResource( 99 )
group = SubResource( 118 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="Chapters/Chapter2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -102.0
margin_top = 4.0
margin_right = 102.0
margin_bottom = 45.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 93 )
text = "CHAPTER 2"

[node name="BossName" type="Label" parent="Chapters/Chapter2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -103.5
margin_top = -131.0
margin_right = 103.5
margin_bottom = -10.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 94 )
text = "SOON"
align = 1
valign = 2
autowrap = true

[node name="Chapter3" type="Button" parent="Chapters"]
modulate = Color( 0.654902, 0.654902, 0.654902, 1 )
margin_left = 477.0
margin_right = 706.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 99 )
custom_styles/pressed = SubResource( 99 )
custom_styles/focus = SubResource( 99 )
custom_styles/disabled = SubResource( 99 )
custom_styles/normal = SubResource( 99 )
group = SubResource( 118 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="Chapters/Chapter3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -102.0
margin_top = 4.0
margin_right = 102.0
margin_bottom = 45.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 93 )
text = "CHAPTER 3"

[node name="BossName" type="Label" parent="Chapters/Chapter3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -103.5
margin_top = -131.0
margin_right = 103.5
margin_bottom = -10.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 94 )
text = "soon"
align = 1
valign = 2
autowrap = true

[node name="Chapter4" type="Button" parent="Chapters"]
modulate = Color( 0.654902, 0.654902, 0.654902, 1 )
margin_left = 716.0
margin_right = 945.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 99 )
custom_styles/pressed = SubResource( 99 )
custom_styles/focus = SubResource( 99 )
custom_styles/disabled = SubResource( 99 )
custom_styles/normal = SubResource( 99 )
group = SubResource( 118 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="Chapters/Chapter4"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -102.0
margin_top = 4.0
margin_right = 102.0
margin_bottom = 45.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 93 )
text = "CHAPTER 4"

[node name="BossName" type="Label" parent="Chapters/Chapter4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -103.5
margin_top = -131.0
margin_right = 103.5
margin_bottom = -10.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 94 )
text = "soon"
align = 1
valign = 2
autowrap = true

[node name="ChapterMenus" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect2" type="ColorRect" parent="ChapterMenus"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.34902 )

[node name="ColorRect3" type="ColorRect" parent="ChapterMenus"]
modulate = Color( 1, 1, 1, 0.184314 )
material = SubResource( 121 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="ChapterMenus"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
material = SubResource( 107 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CloseButton" type="Button" parent="ChapterMenus"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -63.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 61.0
focus_neighbour_left = NodePath("../Chapter1/ChoicesContainer/Choice")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 116 )
custom_styles/hover = SubResource( 117 )
custom_styles/pressed = SubResource( 117 )
custom_styles/focus = SubResource( 117 )
custom_styles/disabled = SubResource( 117 )
custom_styles/normal = SubResource( 117 )
group = SubResource( 119 )
text = " X"
script = ExtResource( 2 )

[node name="Chapter1" type="Panel" parent="ChapterMenus"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -233.0
margin_top = -219.0
margin_right = 235.0
margin_bottom = 219.0
custom_styles/panel = SubResource( 108 )

[node name="Label" type="Label" parent="ChapterMenus/Chapter1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -212.0
margin_top = 50.0
margin_right = 212.0
margin_bottom = 91.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 93 )
text = "PICK WHERE TO START"

[node name="Label2" type="Label" parent="ChapterMenus/Chapter1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -212.0
margin_top = 13.0
margin_right = 212.0
margin_bottom = 54.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 93 )
text = "CHAPTER 1"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="ChapterMenus/Chapter1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.5
margin_top = -118.0
margin_right = 216.5
margin_bottom = -104.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChoicesContainer" type="VBoxContainer" parent="ChapterMenus/Chapter1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.5
margin_top = -148.5
margin_right = 216.5
margin_bottom = 148.5
alignment = 1

[node name="Choice" type="Button" parent="ChapterMenus/Chapter1/ChoicesContainer"]
margin_top = 58.0
margin_right = 433.0
margin_bottom = 100.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../PlayButton")
focus_neighbour_right = NodePath("../../../CloseButton")
focus_neighbour_bottom = NodePath("../Choice2")
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.682353, 0.682353, 1 )
custom_colors/font_color_pressed = Color( 1, 0.415686, 0.415686, 1 )
custom_fonts/font = SubResource( 109 )
custom_styles/focus = SubResource( 110 )
toggle_mode = true
group = SubResource( 119 )
text = "WAVE 1"
flat = true
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="ChapterMenus/Chapter1/ChoicesContainer/Choice"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.5
margin_top = -5.0
margin_right = 167.5
rect_pivot_offset = Vector2( 167, 0 )
texture = SubResource( 114 )
expand = true

[node name="Choice2" type="Button" parent="ChapterMenus/Chapter1/ChoicesContainer"]
margin_top = 104.0
margin_right = 433.0
margin_bottom = 146.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Choice")
focus_neighbour_right = NodePath("../../../CloseButton")
focus_neighbour_bottom = NodePath("../Choice3")
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.682353, 0.682353, 1 )
custom_colors/font_color_pressed = Color( 1, 0.415686, 0.415686, 1 )
custom_fonts/font = SubResource( 109 )
custom_styles/focus = SubResource( 110 )
toggle_mode = true
group = SubResource( 119 )
text = "DEMON TANK"
flat = true
script = ExtResource( 3 )
wave = 10
what_to_check = 1.2
should_spend_pass = true

[node name="TextureRect" type="TextureRect" parent="ChapterMenus/Chapter1/ChoicesContainer/Choice2"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.5
margin_top = -5.0
margin_right = 167.5
rect_pivot_offset = Vector2( 167, 0 )
texture = SubResource( 114 )
expand = true

[node name="Choice3" type="Button" parent="ChapterMenus/Chapter1/ChoicesContainer"]
margin_top = 150.0
margin_right = 433.0
margin_bottom = 192.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Choice2")
focus_neighbour_right = NodePath("../../../CloseButton")
focus_neighbour_bottom = NodePath("../Choice4")
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.682353, 0.682353, 1 )
custom_colors/font_color_pressed = Color( 1, 0.415686, 0.415686, 1 )
custom_fonts/font = SubResource( 109 )
custom_styles/focus = SubResource( 110 )
toggle_mode = true
group = SubResource( 119 )
text = "WAVE 11"
flat = true
script = ExtResource( 3 )
chapter = "res://Scenes/Chapter 1 Part 2.tscn"
what_to_check = 1.3

[node name="TextureRect" type="TextureRect" parent="ChapterMenus/Chapter1/ChoicesContainer/Choice3"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.5
margin_top = -5.0
margin_right = 167.5
rect_pivot_offset = Vector2( 167, 0 )
texture = SubResource( 114 )
expand = true

[node name="Choice4" type="Button" parent="ChapterMenus/Chapter1/ChoicesContainer"]
margin_top = 196.0
margin_right = 433.0
margin_bottom = 238.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Choice3")
focus_neighbour_right = NodePath("../../../CloseButton")
focus_neighbour_bottom = NodePath("../../PlayButton")
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.682353, 0.682353, 1 )
custom_colors/font_color_pressed = Color( 1, 0.415686, 0.415686, 1 )
custom_fonts/font = SubResource( 109 )
custom_styles/focus = SubResource( 110 )
toggle_mode = true
group = SubResource( 119 )
text = " ex. Acranus"
flat = true
script = ExtResource( 3 )
wave = 15
chapter = "res://Scenes/Chapter 1 Part 2.tscn"
what_to_check = 1.4
should_spend_pass = true

[node name="TextureRect" type="TextureRect" parent="ChapterMenus/Chapter1/ChoicesContainer/Choice4"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.5
margin_top = -5.0
margin_right = 167.5
rect_pivot_offset = Vector2( 167, 0 )
texture = SubResource( 114 )
expand = true

[node name="PlayButton" type="Button" parent="ChapterMenus/Chapter1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.5
margin_top = -78.0
margin_right = 167.5
margin_bottom = -22.0
rect_pivot_offset = Vector2( 167, 33 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../ChoicesContainer/Choice4")
focus_neighbour_right = NodePath("../../CloseButton")
focus_neighbour_bottom = NodePath("../ChoicesContainer/Choice")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 111 )
custom_styles/focus = SubResource( 123 )
custom_styles/normal = SubResource( 113 )
group = SubResource( 119 )
text = "PLAY"
flat = true
script = ExtResource( 2 )
has_a_bar = true

[node name="TextureRect" type="TextureRect" parent="ChapterMenus/Chapter1/PlayButton"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -167.5
margin_top = -5.0
margin_right = 167.5
rect_pivot_offset = Vector2( 167, 0 )
texture = SubResource( 114 )
expand = true

[node name="BossPasses" type="HBoxContainer" parent="ChapterMenus"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = -59.0
margin_right = 189.0
custom_constants/separation = -37

[node name="Icon" type="TextureRect" parent="ChapterMenus/BossPasses"]
margin_right = 106.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
stretch_mode = 5

[node name="Amount" type="Label" parent="ChapterMenus/BossPasses"]
margin_left = 69.0
margin_top = 11.0
margin_right = 175.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 115, 27 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
custom_colors/font_color_shadow = Color( 0.290196, 0.290196, 0.290196, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 125 )
text = "0"
valign = 1

[node name="Error" type="Label" parent="ChapterMenus"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = 210.0
margin_right = 512.0
margin_bottom = 246.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.286275, 0.0156863, 0.0156863, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 109 )
text = "YOU NEED A BOSS PASS TO START FROM THIS PART"
align = 1

[node name="locked" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
bus = "SoundEffects"

[node name="MainMenu" type="Button" parent="."]
modulate = Color( 1.15, 1, 1, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -61.0
margin_top = -29.0
margin_right = 61.0
margin_bottom = -4.0
focus_neighbour_right = NodePath("../HBoxContainer/NextButton")
custom_fonts/font = SubResource( 130 )
custom_styles/hover = SubResource( 131 )
custom_styles/pressed = SubResource( 131 )
custom_styles/focus = SubResource( 132 )
custom_styles/disabled = SubResource( 132 )
custom_styles/normal = SubResource( 132 )
text = "BACK"
script = ExtResource( 2 )

[connection signal="pressed" from="Chapters/Chapter1" to="." method="_on_Chapter1_pressed"]
[connection signal="pressed" from="Chapters/Chapter2" to="." method="_on_Chapter2_pressed"]
[connection signal="pressed" from="Chapters/Chapter3" to="." method="_on_Chapter3_pressed"]
[connection signal="pressed" from="Chapters/Chapter4" to="." method="_on_Chapter4_pressed"]
[connection signal="pressed" from="ChapterMenus/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="ChapterMenus/Chapter1/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
